[tool.poetry]
name = "pycaskdb"
version = "0.1.0"
description = ""
authors = ["theirix <theirix@gmail.com", "Avinash Sajjanshetty <opensource@avi.im>"]
license = "MIT"
classifiers = [ "Development Status :: 4 - Beta",
	"Programming Language :: Python" ]

[tool.poetry.dependencies]
python = "^3.11"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "~7"
coverage = "~6"
flake8 = "~4"
mypy = "~1"
black = "*"
hypothesis = "^6.72.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

